fixes spacing in js and scss
fixes config merge bug

adds redirect component

fixes scroll bugs

addresses feedback from code review

adds missing changes from code review

adds requested changes from code review

adds requested changes from code review

--- a/src/components/NavMobile/NavMobile.scss
+++ b/src/components/NavMobile/NavMobile.scss
@@ -2,13 +2,12 @@
 @import '../../styles/utilities/breakpoints.scss';
 @import '../../styles/utilities/fonts.scss';
 
-.nav-mobile{
+.nav-mobile {
   -webkit-tap-highlight-color: transparent;
   display: none;
-  overflow: hidden;
 }
 
-@media screen and (max-width: $breakpoint-laptop){
+@media screen and (max-width: $breakpoint-laptop) {
   .nav-mobile {
     position: relative;
     display: flex;
@@ -29,7 +28,7 @@
     &__logo {
       width: 5rem;
       height: 5rem;
-      margin-left: -.5rem;
+      margin-left: -0.5rem;
       fill: $primary-1;
     }
 
@@ -40,9 +39,9 @@
       color: $dark-grey;
       font-size: 1.25rem;
       font-family: $lora;
-      
+
       &--sm {
-        font-size: .75rem;
+        font-size: 0.75rem;
         font-family: $poppins;
       }
     }
@@ -51,7 +50,7 @@
       width: 1.5rem;
     }
 
-    &__listItem{
+    &__listItem {
       padding: 0;
     }
 
@@ -66,19 +65,9 @@
       height: 100%;
       padding: 2rem;
       background-color: $white;
-      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+      filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
 
       &--active {
-        @keyframes slideIn {
-          from {
-            right: -35rem;
-          }
-    
-          to {
-            right: 0;
-          }
-        }
-
         @extend .nav-mobile__sidebar;
         top: 0;
         right: 0;
@@ -87,16 +76,6 @@
       }
 
       &--inactive {
-        @keyframes slideOut {
-          from {
-            right: 0rem;
-          }
-    
-          to {
-            right: -35rem;
-          }
-        }
-
         @extend .nav-mobile__sidebar;
         position: fixed;
         top: 0;
@@ -127,88 +106,15 @@
         margin-right: 1rem;
 
         &--active {
-          @keyframes rotateCarrot {
-            0%   {
-              transform: rotate(0deg);
-            }
-
-            100% {
-              transform: rotate(180deg);
-            }
-          }
-
           margin-right: 1rem;
           animation: rotateCarrot 200ms ease-in-out forwards;
         }
 
         &--inactive {
-          @keyframes derotateCarrot {
-            0%   {
-              transform: rotate(180deg);
-            }
-  
-            100% {
-              transform: rotate(0deg);
-            }
-          }
-
           margin-right: 1rem;
           animation: derotateCarrot 200ms ease-in-out forwards;
         }
       }
-
-      &--dropdown {
-        display: none;
-        margin: 0 -2rem;
-        padding: 0;
-        
-        &--active {
-          @keyframes dropDown {
-            0% {
-              height: 0;
-              transform: scaleY(0)
-            }
-            
-            100% {
-              height: 5rem;
-              transform: scaleY(1)
-            }
-          }
-
-          @extend .nav-mobile__sidebar--dropdown;
-          display: block;
-          transform-origin: top center;
-          animation: dropDown 200ms ease-in-out forwards;
-        }
-
-        &--inactive {
-          @keyframes pullUp {
-            0% {
-              height: 5rem;
-              transform: scaleY(1)
-            }
-
-            100% {
-              height: 0;
-              transform: scaleY(0);
-            }
-          }
-
-          @extend .nav-mobile__sidebar--dropdown;
-          display: block;
-          height: 0;
-          transform-origin: top center;
-          animation: pullUp 200ms ease-in-out forwards;
-        }
-
-        &-item {
-        left: 0;
-        display: flex;
-        padding: .5rem 3rem;
-        background-color: $primary-3;
-        font-weight: 100;
-        }
-    }
 
       &--break {
         display: flex;
@@ -219,14 +125,14 @@
         background-color: $primary-1;
       }
 
-      &--footer{
+      &--footer {
         display: flex;
         flex-direction: column;
-        padding: 1rem 0rem 3rem 0rem;
+        padding: 1rem 0 3rem;
 
         &-link {
           display: flex;
-          padding: .5rem 0;;
+          padding: 0.5rem 0;;
         }
 
         &-button {
@@ -240,25 +146,54 @@
       }
     }
 
+    &__dropdown {
+      display: none;
+      margin: 0 -2rem;
+      padding: 0;
+
+      &--active {
+        @extend .nav-mobile__dropdown;
+        display: block;
+        transform-origin: top center;
+        animation: dropDown 200ms ease-in-out forwards;
+      }
+
+      &--inactive {
+        @extend .nav-mobile__dropdown;
+        display: block;
+        height: 0;
+        transform-origin: top center;
+        animation: pullUp 200ms ease-in-out forwards;
+      }
+
+      &-item {
+        left: 0;
+        display: flex;
+        padding: 0.5rem 3rem;
+        background-color: $primary-3;
+        font-weight: 100;
+      }
+    }
+
     &__navclose {
       align-self: flex-end;
       min-width: 1.25rem;
       min-height: 1.25rem;
-      margin: .5rem;
-      padding: .5rem;
+      margin: 0.5rem;
+      padding: 0.5rem;
     }
   }
 }
 
-@media screen and (max-width: $breakpoint-mobile-large){
+@media screen and (max-width: $breakpoint-mobile-large) {
   .nav-mobile {
     &__title {
-      padding-left: .25rem;
+      padding-left: 0.25rem;
       font-size: 1rem;
 
       &--sm {
-        padding-left: .25rem;
-        font-size: .5rem;
+        padding-left: 0.25rem;
+        font-size: 0.5rem;
       }
     }
 
@@ -268,22 +203,22 @@
         max-width: $breakpoint-mobile-large;
         padding: 2.5rem;
       }
+    }
 
-      &--dropdown {
-        margin: 0 -3.5rem;
-        padding-left: 1rem;
-      }
+    &__dropdown {
+      margin: 0 -3.5rem;
+      padding-left: 1rem;
     }
   }
 }
 
-@media screen and (max-width: $breakpoint-mobile-med){
-  .nav-mobile__title--sm{
+@media screen and (max-width: $breakpoint-mobile-med) {
+  .nav-mobile__title--sm {
     display: none;
   }
 }
 
-@media screen and (max-width: $breakpoint-mobile){
+@media screen and (max-width: $breakpoint-mobile) {
   .nav-mobile {
     height: 3rem;
     padding: 1rem 1.5rem;
@@ -292,10 +227,10 @@
       width: 2.5rem;
       height: 2.5rem;
     }
-  
+
     &__title {
-      padding-left: .25rem;
-      font-size: .75rem;
+      padding-left: 0.25rem;
+      font-size: 0.75rem;
 
       &--sm {
         display: none;
@@ -309,24 +244,88 @@
       &--item {
         width: 95%;
         margin-left: auto;
-        padding: .5rem 0;
-      }
-
-      &--dropdown {
-        &-item {
-          width: 100%;
-          padding-left: 4.5rem;
-        }
+        padding: 0.5rem 0;
       }
 
       &--footer {
         width: 95%;
-        padding: .25rem 0rem 3rem 0rem;
+        padding: 0.25rem 0 3rem 0;
 
         &-link {
-          padding: .5rem 1rem;
+          padding: 0.5rem 1rem;
         }
       }
     }
+
+    &__dropdown {
+      &-item {
+        width: 100%;
+        padding-left: 4.5rem;
+      }
+    }
+  }
+}
+
+@keyframes slideIn {
+  from {
+    right: -35rem;
+  }
+
+  to {
+    right: 0;
+  }
+}
+
+@keyframes slideOut {
+  from {
+    right: 0;
+  }
+
+  to {
+    right: -35rem;
+  }
+}
+
+@keyframes rotateCarrot {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(180deg);
+  }
+}
+
+@keyframes derotateCarrot {
+  0% {
+    transform: rotate(180deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+@keyframes dropDown {
+  0% {
+    height: 0;
+    transform: scaleY(0);
+  }
+
+  100% {
+    height: 5rem;
+    transform: scaleY(1);
+  }
+}
+
+@keyframes pullUp {
+  0% {
+    height: 5rem;
+    transform: scaleY(1);
+  }
+
+  100% {
+    height: 0;
+    transform: scaleY(0);
   }
 }
